unpackaged/main/default/objects/Account/fields/ActivitePrincipaleExercee__c.field-meta.xml
<CustomField>
    <fullName>ActivitePrincipaleExercee__c</fullName>
    <inlineHelpText>NAF code classification</inlineHelpText>
    <label>Activité Principale Exercée (APE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>