unpackaged/main/default/objects/Account/fields/Activities_indicators__c.field-meta.xml
<CustomField>
    <fullName>Activities_indicators__c</fullName>
    <formula>IF
( 
AND(Sans_Activites_En_Cours__c =true, Sans_Activites_Terminees__c =true)
,
&quot;WITHOUT&quot;
,
IF(OR(Sans_Activites_En_Cours__c =true, Sans_Activites_Terminees__c =true)
,
&quot;WITH&quot;
,IF
(
AND(Sans_Activites_En_Cours__c =False, Sans_Activites_Terminees__c =False)
,
&quot;WITH&quot;
,
&quot;--&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activities indicator</label>
    <type>Text</type>
</CustomField>