unpackaged/main/default/objects/Account/fields/Agence_en_mobilite__c.field-meta.xml
<CustomField>
    <fullName>Agence_en_mobilite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agence en mobilité</label>
    <type>Checkbox</type>
</CustomField>