unpackaged/main/default/objects/Account/fields/AgrementSFAC__c.field-meta.xml
<CustomField>
    <fullName>AgrementSFAC__c</fullName>
    <label>Agrément</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>