unpackaged/main/default/objects/Account/fields/Ancestor__c.field-meta.xml
<CustomField>
    <fullName>Ancestor__c</fullName>
    <label>Ancestor</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>