unpackaged/main/default/objects/Account/fields/AnneeCreation__c.field-meta.xml
<CustomField>
    <fullName>AnneeCreation__c</fullName>
    <label>Année de création</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>