unpackaged/main/default/objects/Account/fields/API_Connector__Company_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Company_Report_Date__c</fullName>
    <description>This field is used to store the date related to the Company Report Service.</description>
    <label>Company Report Date</label>
    <type>Date</type>
</CustomField>