unpackaged/main/default/objects/Account/fields/API_Connector__Company_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Company_Report_Status__c</fullName>
    <description>This field is used to store the status related to the Company Report Service.</description>
    <label>Company Report Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>