unpackaged/main/default/objects/Account/fields/API_Connector__Credit_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Credit_Check_Status__c</fullName>
    <label>Credit Check Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>