unpackaged/main/default/objects/Account/fields/API_Connector__Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Credit_Rating__c</fullName>
    <label>Credit Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>