unpackaged/main/default/objects/Account/fields/API_Connector__dbdm_date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__dbdm_date__c</fullName>
    <description>This field is used to store the date related to the Global Decision Maker Service.</description>
    <label>D&amp;B Decision Maker Date</label>
    <type>Date</type>
</CustomField>