unpackaged/main/default/objects/Account/fields/API_Connector__dbdm_status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__dbdm_status__c</fullName>
    <description>This field is used to store the status related to the Global Decision Maker Service.</description>
    <label>D&amp;B Decision Maker Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>