unpackaged/main/default/objects/Account/fields/API_Connector__IndueD_DueDiligences_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_DueDiligences_Date__c</fullName>
    <description>This field is used to store the date related to the Indued service step 2.</description>
    <inlineHelpText>This field is used to store the date related to the Indued service step 2.</inlineHelpText>
    <label>indueD DueDiligences Date</label>
    <type>Date</type>
</CustomField>