unpackaged/main/default/objects/Account/fields/API_Connector__IndueD_DueDiligences_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_DueDiligences_Status__c</fullName>
    <label>indueD DueDiligences Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>