unpackaged/main/default/objects/Account/fields/API_Connector__IndueD_DuediligencesFinal_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_DuediligencesFinal_Date__c</fullName>
    <description>This field is used to store the date related to the Indued due diligence duedid service step 3.</description>
    <inlineHelpText>This field is used to store the date related to the Indued due diligence duedid service step 3.</inlineHelpText>
    <label>indueD DuediligencesFinal Date</label>
    <type>Date</type>
</CustomField>