unpackaged/main/default/objects/Account/fields/API_Connector__IndueD_DuediligencesFinal_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_DuediligencesFinal_Status__c</fullName>
    <description>This field is used to store the status related to the Indued due diligence duedid service step 3.</description>
    <inlineHelpText>This field is used to store the status related to the Indued due diligence duedid service step 3.</inlineHelpText>
    <label>indueD DuediligencesFinal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>