unpackaged/main/default/objects/Account/fields/API_Connector__IndueD_Portfolio_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_Portfolio_Status__c</fullName>
    <description>This field is used to store the status related to the Indued porfolio Service step 1.</description>
    <inlineHelpText>This field is used to store the status related to the Indued porfolio Service step 1.</inlineHelpText>
    <label>indueD Portfolio Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>