unpackaged/main/default/objects/Account/fields/API_Connector__IndueD_Reports_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_Reports_Date__c</fullName>
    <description>This field is used to store the date related to Indued report service step 4.</description>
    <inlineHelpText>This field is used to store the date related to Indued report service step 4.</inlineHelpText>
    <label>indueD Reports Date</label>
    <type>Date</type>
</CustomField>