unpackaged/main/default/objects/Account/fields/API_Connector__IndueD_Reports_ID__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_Reports_ID__c</fullName>
    <description>This field is used to store the id return by the Indued report service step 4.</description>
    <inlineHelpText>This field is used to store the id return by the Indued report service step 4.</inlineHelpText>
    <label>indueD Reports ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>