unpackaged/main/default/objects/Account/fields/API_Connector__IndueD_Reports_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_Reports_Status__c</fullName>
    <description>This field is used to store the status related to Indued report service step 4.</description>
    <inlineHelpText>This field is used to store the status related to Indued report service step 4.</inlineHelpText>
    <label>indueD Reports Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>