unpackaged/main/default/objects/Account/fields/API_Connector__IndueD_ReportsFinal_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_ReportsFinal_Date__c</fullName>
    <description>This field is used to store the date related to Indued report id service step 5</description>
    <inlineHelpText>This field is used to store the date related to Indued report id service step 5</inlineHelpText>
    <label>indueD ReportsFinal Date</label>
    <type>Date</type>
</CustomField>