unpackaged/main/default/objects/Account/fields/API_Connector__IndueD_ReportsFinal_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_ReportsFinal_Status__c</fullName>
    <description>This field is used to store the status related to Indued report id service step 5.</description>
    <inlineHelpText>This field is used to store the status related to Indued report id service step 5.</inlineHelpText>
    <label>indueD ReportsFinal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>