unpackaged/main/default/objects/Account/fields/API_Connector__IndueD_ReportsFinal_URL__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_ReportsFinal_URL__c</fullName>
    <description>This field is used to store the response url related to Indued report id service step 5</description>
    <inlineHelpText>This field is used to store the response url related to Indued report id service step 5</inlineHelpText>
    <label>indueD ReportsFinal URL</label>
    <type>Url</type>
</CustomField>