unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Advanced_Address_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Advanced_Address_Date__c</fullName>
    <description>This field is used to store the date related to the IWS Advanced Address service.</description>
    <inlineHelpText>This field is used to store the date related to the IWS Advanced Address service.</inlineHelpText>
    <label>IWS Advanced Address Information Date</label>
    <type>Date</type>
</CustomField>