unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Advanced_Address_Information_Log__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Advanced_Address_Information_Log__c</fullName>
    <description>This field is used to store the logs related to the IWS Advanced Address service.</description>
    <label>IWS Advanced Address Information Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>