unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Advanced_Address_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Advanced_Address_Status__c</fullName>
    <description>This field is used to store the status related to the IWS Advanced Address service.</description>
    <label>IWS Advanced Address Information Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>