unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Balance_Sheet_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Balance_Sheet_Date__c</fullName>
    <label>IWS Balance Sheet Information Date</label>
    <type>Date</type>
</CustomField>