unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Balance_Sheet_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Balance_Sheet_Status__c</fullName>
    <label>IWS Balance Sheet Information Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>