unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Bankruptcy_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Bankruptcy_Date__c</fullName>
    <description>This field is used to store the date related to the IWS Bankruptcy Information service.</description>
    <inlineHelpText>This field is used to store the date related to the IWS Bankruptcy Information service</inlineHelpText>
    <label>IWS Bankruptcy Information Date</label>
    <type>Date</type>
</CustomField>