unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Bankruptcy_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Bankruptcy_Status__c</fullName>
    <description>This field is used to store the status related to the IWS Bankruptcy Information Service.</description>
    <inlineHelpText>This field is used to store the status related to the IWS Bankruptcy Information Service.</inlineHelpText>
    <label>IWS Bankruptcy Information Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>