unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Customer_Identification_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Customer_Identification_Date__c</fullName>
    <description>This field is used to store the date related to the IWS service.</description>
    <label>IWS Customer Identification Date</label>
    <type>Date</type>
</CustomField>