unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Customer_Identification_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Customer_Identification_Status__c</fullName>
    <description>This field is used to store the status related to the IWS service.</description>
    <label>IWS Customer Identification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>