unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Paydex_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Paydex_Date__c</fullName>
    <description>This field is used to store the date related to the IWS Paydex Information service.</description>
    <inlineHelpText>This field is used to store the date related to the IWS Paydex Information service.</inlineHelpText>
    <label>IWS Paydex Information Date</label>
    <type>Date</type>
</CustomField>