unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Standard_Address_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Standard_Address_Date__c</fullName>
    <label>IWS Standard Address Information Date</label>
    <type>Date</type>
</CustomField>