unpackaged/main/default/objects/Account/fields/API_Connector__IWS_Standard_Address_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IWS_Standard_Address_Status__c</fullName>
    <label>IWS Standard Address Information Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>