unpackaged/main/default/objects/Account/fields/API_Connector__KvK_match_date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__KvK_match_date__c</fullName>
    <label>KvK Match Date</label>
    <type>Date</type>
</CustomField>