unpackaged/main/default/objects/Account/fields/API_Connector__KvK_match_error__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__KvK_match_error__c</fullName>
    <label>KvK Match Error</label>
    <type>TextArea</type>
</CustomField>