unpackaged/main/default/objects/Account/fields/API_Connector__Quick_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Quick_Check_Date__c</fullName>
    <label>Quick Check Date</label>
    <type>Date</type>
</CustomField>