unpackaged/main/default/objects/Account/fields/API_Connector__Risk_Datablocks_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Risk_Datablocks_Date__c</fullName>
    <description>This field is used to store the date related to the Risk Datablocks service.</description>
    <inlineHelpText>This field is used to store the date related to the Risk Datablocks service.</inlineHelpText>
    <label>Risk Datablocks Date</label>
    <type>Date</type>
</CustomField>