unpackaged/main/default/objects/Account/fields/API_Connector__Risk_Datablocks_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Risk_Datablocks_Status__c</fullName>
    <description>This field is used to store the status related to the Risk Datablocks Service.</description>
    <inlineHelpText>This field is used to store the status related to the Risk Datablocks Service.</inlineHelpText>
    <label>Risk Datablocks Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>