unpackaged/main/default/objects/Account/fields/API_Connector__Toolkit_date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Toolkit_date__c</fullName>
    <label>Toolkit Date</label>
    <type>Date</type>
</CustomField>