unpackaged/main/default/objects/Account/fields/API_Connector__Trade_Credit_Risk_Log__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Trade_Credit_Risk_Log__c</fullName>
    <label>Trade Credit Risk Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>