unpackaged/main/default/objects/Account/fields/API_Connector__VAT_check_date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__VAT_check_date__c</fullName>
    <label>VAT Check Date</label>
    <type>Date</type>
</CustomField>