unpackaged/main/default/objects/Account/fields/API_Connector__VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>