unpackaged/main/default/objects/Account/fields/API_Connector__VAT_Number_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__VAT_Number_Validation_Status__c</fullName>
    <label>VAT Number Validation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>