unpackaged/main/default/objects/Account/fields/API_Connector__VAT_Request_Identifier__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__VAT_Request_Identifier__c</fullName>
    <description>This field is used to store the request identifier related to the VAT Number Service.</description>
    <inlineHelpText>This field is used to store the request identifier related to the VAT Number Service.</inlineHelpText>
    <label>VAT Request Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>