unpackaged/main/default/objects/Account/fields/Avec_Contact__c.field-meta.xml
<CustomField>
    <fullName>Avec_Contact__c</fullName>
    <description>Si marqué , le compte possède au moins un contact</description>
    <formula>if
(
Nb_contacts__c &gt; 0 
, 
true 
, 
false 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avec Contact</label>
    <type>Checkbox</type>
</CustomField>