unpackaged/main/default/objects/Account/fields/Avec_contacts__c.field-meta.xml
<CustomField>
    <fullName>Avec_contacts__c</fullName>
    <formula>if 
(
 Nb_contacts__c &gt;0
,
true
,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avec contacts</label>
    <type>Checkbox</type>
</CustomField>