unpackaged/main/default/objects/Account/fields/AvisCM__c.field-meta.xml
<CustomField>
    <fullName>AvisCM__c</fullName>
    <label>Avis CM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Favorable</fullName>
            </value>
            <value>
                <fullName>Défavorable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>