unpackaged/main/default/objects/Account/fields/ByPassPaymentLate__c.field-meta.xml
<CustomField>
    <fullName>ByPassPaymentLate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass retard de paiement</label>
    <type>Checkbox</type>
</CustomField>