unpackaged/main/default/objects/Account/fields/CAN1FYTotal__c.field-meta.xml
<CustomField>
    <fullName>CAN1FYTotal__c</fullName>
    <description>Somme du chiffre d&#39;affaires de tous les contrats N-1 sur l&#39;année entière sur tous types de produits</description>
    <label>Chiffre d&#39;affaires N-1 FY - Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>