unpackaged/main/default/objects/Account/fields/CAN1YTDTotal__c.field-meta.xml
<CustomField>
    <fullName>CAN1YTDTotal__c</fullName>
    <description>Somme du chiffre d&#39;affaires de tous les contrats N-1 sur la même période YTD sur tous types de produits</description>
    <label>Chiffre d&#39;affaires N-1 YTD - Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>