unpackaged/main/default/objects/Account/fields/CapitalSocial__c.field-meta.xml
<CustomField>
    <fullName>CapitalSocial__c</fullName>
    <label>Capital social</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>