unpackaged/main/default/objects/Account/fields/Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Catalogue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AVC</description>
    <label>Catalogue</label>
    <type>Checkbox</type>
</CustomField>