unpackaged/main/default/objects/Account/fields/Catalogue_parent__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_parent__c</fullName>
    <formula>if
(
 OR(Parent.Catalogue__c = true , UltimateAccount__r.Catalogue__c = true)
,
true
,
false)</formula>
    <label>Catalogue parent</label>
    <type>Checkbox</type>
</CustomField>