unpackaged/main/default/objects/Account/fields/CategorieCompte__c.field-meta.xml
<CustomField>
    <fullName>CategorieCompte__c</fullName>
    <label>Catégorie de compte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Compte Clé</fullName>
            </value>
            <value>
                <fullName>Compte Standard</fullName>
            </value>
            <value>
                <fullName>Grand Compte</fullName>
            </value>
            <value>
                <fullName>Grand Compte Groupe</fullName>
            </value>
            <value>
                <fullName>Grand Compte National</fullName>
            </value>
            <value>
                <fullName>Multi-Régions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>