unpackaged/main/default/objects/Account/fields/CAYTDTotal__c.field-meta.xml
<CustomField>
    <fullName>CAYTDTotal__c</fullName>
    <description>Somme du chiffre d&#39;affaires de tous les contrats YTD sur tous types de produits</description>
    <label>Chiffre d&#39;affaires YTD - Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>