unpackaged/main/default/objects/Account/fields/CCTOP10__c.field-meta.xml
<CustomField>
    <fullName>CCTOP10__c</fullName>
    <label>CCTOP10</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>3 - Proposition remise, 4 - En négociation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Probabilite_signature__c</field>
        <operation>equals</operation>
        <value>50% (Probable), 80% (Très probable)</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Opportunité Mono-Produit, Opportunité Mono-Produit (en cours), Opportunité Mono-Produit (clôturée)</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>