unpackaged/main/default/objects/Account/fields/Check_CodePostal__c.field-meta.xml
<CustomField>
    <fullName>Check_CodePostal__c</fullName>
    <formula>if
(
LEN(CodePostal__c)&lt;=10
,
true
,
false)</formula>
    <label>Check_CodePostal</label>
    <type>Checkbox</type>
</CustomField>