unpackaged/main/default/objects/Account/fields/Check_Ligne1__c.field-meta.xml
<CustomField>
    <fullName>Check_Ligne1__c</fullName>
    <formula>if
(
LEN(Ligne1__c)&lt;=60
,
true
,
false
)</formula>
    <label>Check_Ligne1</label>
    <type>Checkbox</type>
</CustomField>