unpackaged/main/default/objects/Account/fields/Check_Ligne2__c.field-meta.xml
<CustomField>
    <fullName>Check_Ligne2__c</fullName>
    <formula>if
(
LEN(Ligne2__c)&lt;=40
,
true
,
false)</formula>
    <label>Check_Ligne2</label>
    <type>Checkbox</type>
</CustomField>