unpackaged/main/default/objects/Account/fields/Check_Ligne3__c.field-meta.xml
<CustomField>
    <fullName>Check_Ligne3__c</fullName>
    <formula>if
(
LEN(Ligne3__c)&lt;=40
,
True
,
False
)</formula>
    <label>Check_Ligne3</label>
    <type>Checkbox</type>
</CustomField>