unpackaged/main/default/objects/Account/fields/Check_TypeIdentifiantNational__c.field-meta.xml
<CustomField>
    <fullName>Check_TypeIdentifiantNational__c</fullName>
    <formula>if
(
LEN( text(TypeIdentifiantNational__c ))&lt;=80
,
true
,
false)</formula>
    <label>Check_TypeIdentifiantNational</label>
    <type>Checkbox</type>
</CustomField>