unpackaged/main/default/objects/Account/fields/Classification_CA__c.field-meta.xml
<CustomField>
    <fullName>Classification_CA__c</fullName>
    <formula>IF(ClassificationCA_K1__c &gt;=1,&quot;K1&quot;,IF(ClassificationCA_K2__c &gt;=1,&quot;K2&quot;,IF(ClassificationCA_K3__c &gt;=1,&quot;K3&quot;,IF(ClassificationCA_K__c &gt;=1,&quot;K&quot;,IF(ClassificationCA_M__c &gt;=1, &quot;M&quot;,IF(ClassificationCA_S__c&gt;=1,&quot;S&quot;,&quot;&quot;))))))</formula>
    <label>Classification - CA</label>
    <type>Text</type>
</CustomField>